# data-science-learning

./: .gitignore  Dockerfile  Pandas and Seaborn.ipynb  README.md  data_science_learning_template.ipynb  py_notebook_cheatsheet.md  pyproject.toml  resources.md  setup.py
cellular automata/: Agents.ipynb  Automaton.py  Cellular Automata.ipynb  Flock.py  README.md  automata_blender.py  automata_blender_utils.py  ca3d_an_blender.py  ca_an_blender.py  ca_hexa_an_blender.py  gol_donut.py  load_dataset_utils.py  mnca_an_blender.py  mnca_blender.py  mnca_utils.py  snowflakes.py  test.py
data analysis/: Data Viz - Intro.ipynb  Pandas and Seaborn.ipynb
deep learning/: Autoencoders.ipynb  GANs - Intro.ipynb  Sketch Cleanup.ipynb  Style Transfer - Intro.ipynb
ds_utils/: CV_template.py  autoencoder_utils.py  blender_utils.py  classification_utils.py  data_utils.py  generative_utils.py  image_processing.py  nlp_utils.py  noise_utils.py  plot_utils.py  point_cloud_utils.py  sim_utils.py  super_resolution.py  vgg_utils.py  video_utils.py  voxel_utils.py
face-utils/: pyproject.toml
face-utils/configs/: face_detection.yaml
face-utils/face_utils/: Face.py  FaceDetector.py  face_extract.py  face_search.py
face_utils/: Face.py  FaceDetector.py  __init__.py  extract.py  face_extract.py  face_extract_utils.py  face_search.py  pyproject.toml  setup.py
graphics/: Dynamical Systems.ipynb  Generative Art - Intro.ipynb  blender_addon_template.py  cocktail_cloud.py  selective_sampling.py  sierpinski.py  sierpinski_triangle.py
image processing/: Face Swap.ipynb  Image Augmentation.ipynb  Image Processing - Basics.ipynb
machine learning/: Evaluation Metrics.ipynb  Linear Algebra.ipynb  Linear Regression - Basics.ipynb  (+4 more)
(+132 files in other folders)
